realizei as primeiras atualizações

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site test</title>
+    <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
-    
+    <h1>Teste</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nobis aliquam officiis? In, aut provident ex labore nihil sit perferendis minima iste, sequi dolore necessitatibus cupiditate distinctio natus sapiente asperiores.</p>
 </body>
 </html>
