comecei a programar a tela de login

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
-    <h1>Teste</h1>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nobis aliquam officiis? In, aut provident ex labore nihil sit perferendis minima iste, sequi dolore necessitatibus cupiditate distinctio natus sapiente asperiores.</p>
+    <div class="container">
+        <div class="panel left-panel">
+            Painel Esquerdo
+        </div>
+        <div class="panel right-panel">
+            <h1>Login</h1>
+            <p>Para utilizar a IA detectora de insetos, é preciso que você tenha uma conta</p>
+        </div>
+    </div>
 </body>
 </html>
