--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site test</title>
+    <title>Login</title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
-    <div class="container">
-        <div class="panel left-panel">
-            Painel Esquerdo
-        </div>
-        <div class="panel right-panel">
-            <h1>Login</h1>
-            <p>Para utilizar a IA detectora de insetos, é preciso que você tenha uma conta</p>
-        </div>
-    </div>
+    <main>
+        <section id="login">
+            <div id="imagem"></div>
+            <div id="formulario">
+                <h1>Login</h1>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente</p>
+                <form action="login.php" method="post"></form>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
